--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "tradenity/camerastore-php-laravel-sample",
     "description": "Tradenity SDK sample application using the Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": ["ecommerce", "application", "laravel"],
     "license": "Apache Software License",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "tradenity/php-sdk": "0.1.0",
-        "tradenity/laravel-ext": "0.1.0"
+        "tradenity/php-sdk": "1.0.1",
+        "tradenity/laravel-ext": "0.5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
